<resources>
    <string name="app_name">Strava Notifier</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="ble_supported">BLE supported</string>
    <string name="ant_not_installed">ANT+ plugin not installed</string>
    <string name="ant_version">ANT+ plugin version:</string>
    <string name="str_use_ant">Use ANT+</string>
    <string name="str_use_ble">Use BLE</string>
    <string name="str_ant_dev">ANT+ device:</string>
    <string name="str_ble_dev">BLE device:</string>
    <string name="str_wrist_dev">Wrist:</string>
    <string name="str_ant_sel">Select ANT+ device</string>
    <string name="str_ble_sel">Select BLE device</string>
    <string name="str_wrist_sel">Select wrist</string>
    <string name="str_hr_data">HR data</string>
    <string name="str_ble_data">BLE data</string>
    <string name="str_dev_stat">Device status:</string>
    <string name="str_beat_count">Heart beat count:</string>
    <string name="str_hr">Heart rate:</string>
    <string name="str_time">Time:</string>
    <string name="str_dist">Distance:</string>
    <string name="str_hr_dev_type">HR device type</string>
    <string name="str_rr">RR interval:</string>
    <string name="str_start">Start</string>
    <string name="str_autostart">Autostart</string>
    <string name="str_use_hr">Use HR device</string>
    <string name="str_stop">Stop</string>
    <string name="str_empty">---</string>
    <string name="str_timout">Timed out attempting to connect, try again.</string>
    <string name="str_channel_not_available">Channel not available.</string>
    <string name="str_ant_adapter_not_available">ANT adapter not available. Built-in ANT hardware or external adapter required.</string>
    <string name="str_bad_parameters">Bad request parameters.</string>
    <string name="str_other_failure">RequestAccess failed.</string>
    <string name="str_missing_dependensy">You need to install the ANT+ Plugins service or you may need to update your existing version if you already have it.</string>
    <string name="str_unrecognized">Failed: UNRECOGNIZED. PluginLib Upgrade Required?</string>
    <string name="str_unrecognized_other">Unrecognized result:</string>
    <string name="str_permission_ext_storage">Please, grant external storage access</string>
    <string name="str_permission_location">Please, grant location access. It is needed for BLE devices working.</string>
    <string name="str_ble_list_header">Scan BLE devices</string>
    <string name="str_ble_connected">CONNECTED</string>
    <string name="str_ble_disconnected">DISCONNECTED</string>
    <string name="str_ble_scanning">Scanning devices...</string>
    <string name="str_ble_scan_stop">Found devices</string>
</resources>
